# zstd-cmake-lto-bug

./: CMakeLists.txt
